--- a/TravelExpenses/Views/CentroCostoEmpresa/Lista.cshtml
+++ b/TravelExpenses/Views/CentroCostoEmpresa/Lista.cshtml
@@ -1,54 +1,54 @@
-﻿@model TravelExpenses.ViewModels.CentroCostoViewModel
+﻿@model TravelExpenses.ViewModels.CentroCostoEmpresaViewModel
 @{
     ViewData["Title"] = "Centro de Costos";
     Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Centro de Costos</h1>
+<h1>Centro de Costos - Empresa</h1>
 
-<div class="col-12 grid-margin stretch-card">
-    <div class="card">
-        <a asp-controller="CentroCosto" asp-action="Edit" class="btn btn-primary">Agregar Nuevo Centro de Costo</a>
-        <div class="card-body">
-            <div class="table-responsive">
-                <div class="form-group">
-                    <label class="control-label">Empresa</label>
-                    @Html.DropDownListFor(x => Model.Empresas, new SelectList(Model.Empresas, "RFC", "Nombre"), htmlAttributes: new { @class = "form-control", id = "Pais" })
-                    <span class="text-danger" asp-validation-for="Empresas"></span>
-                </div>
+<form method="post">
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <div class="table-responsive">
+                    <div class="form-group">
+                        <label class="control-label">Empresa</label>
+                        @Html.DropDownListFor(x => Model.Empresas, new SelectList(Model.Empresas, "RFC", "Nombre"), htmlAttributes: new { @class = "form-control", id = "Empresa" })
+                        <span class="text-danger" asp-validation-for="Empresas"></span>
+                        <input type="submit" value="Guardar" class="btn btn-primary" />
+                    </div>
 
-                <table id="data-table-basic" class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>
-                                Clave Centro de Costo
-                            </th>
-                            <th>
-                                Nombre
-                            </th>
-                            <th>
-                                Editar
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var centro in Model.CentrosCostos)
-                        {
-
+                    <table id="data-table-basic" class="table table-striped">
+                        <thead>
                             <tr>
-                                <td>@centro.ClaveCentroCosto</td>
-                                <td>@centro.Nombre</td>
-                                <td>
-                                    <a class="btn btn-lg" asp-controller="CentroCosto" asp-action="Edit" asp-route-clavecentrocosto="@centro.ClaveCentroCosto">
-                                        <i class="fas fa-edit"></i>
-                                    </a>
-                                </td>
+                                <th>
+                                    Clave Centro de Costo
+                                </th>
+                                <th>
+                                    Nombre
+                                </th>
+                                <th>
+                                    Asignar
+                                </th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            @foreach (var centro in Model.CentroCostos)
+                            {
 
+                                <tr>
+                                    <td>@centro.ClaveCentroCosto</td>
+                                    <td>@centro.Nombre</td>
+                                    <td>
+                                        <input type="checkbox" value=@centro.Activo/>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+
+                </div>
             </div>
         </div>
     </div>
-</div>
+</form>
