--- a/TravelExpenses/Views/Shared/_Menu.cshtml
+++ b/TravelExpenses/Views/Shared/_Menu.cshtml
@@ -17,7 +17,8 @@
                         <li class="nav-item"> <a class="nav-link" asp-page="/Catalogos/Destinos">Destinos</a></li>
                         <li class="nav-item"><a asp-controller="Empresa" asp-action="ListaEmpresas" class="nav-link">Empresas</a></li>
                         <li class="nav-item"><a asp-controller="Gasto" asp-action="Lista" class="nav-link">Conceptos de Gastos</a></li>
-                        <li class="nav-item"><a asp-controller="CentroCosto" asp-action="Lista" class="nav-link">Cuentas Contables/ Centros de Costos</a></li>
+                        <li class="nav-item"><a asp-controller="CentroCosto" asp-action="Lista" class="nav-link">Centros de Costos</a></li>
+                        <li class="nav-item"><a asp-controller="CentroCostoEmpresa" asp-action="Lista" class="nav-link">Centros de Costos - Empresa</a></li>
                         <li class="nav-item"><a asp-controller="Departamento" asp-action="Lista" class="nav-link">Áreas/Departamentos</a></li>
                         <li class="nav-item"><a asp-controller="Moneda" asp-action="Lista" class="nav-link">Monedas</a></li>
                     </ul>
