--- a/TravelExpenses/Pages/Usuarios/UsuariosRoles.cshtml
+++ b/TravelExpenses/Pages/Usuarios/UsuariosRoles.cshtml
@@ -3,23 +3,33 @@
     ViewData["Title"] = "Roles";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
+
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
 <h1>Usuarios Roles</h1>
 <head>
     <script src="~/lib/jquery/dist/jquery.js"></script>
 </head>
+
+<div>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <label>Usuario</label><br />
+        <imput typeof="TextBox"></imput>
+        <button>Asignar Role</button>
+    }
+</div>
 <script>
 
-    //$.ajax({
-    //    url: "/UsuariosRoles/Prueba",
-    //    data: { name: 'Deepak' },
-    //    success: success,
-    //    dataType: dataType
-    //});
+
 
     $.get("/UsuariosRoles/Prueba", { name: 'Deepak' }, function (data) {
         alert(data);
     });
 
 </script>
+
 
 
