--- a/TravelExpenses/Views/Destino/Edit.cshtml
+++ b/TravelExpenses/Views/Destino/Edit.cshtml
@@ -8,7 +8,7 @@
     <div class="card">
         <div class="card-body">
             <form method="post">
-                <input type="hidden" asp-for="@Model.IdCiudad" />
+                <input type="hidden" asp-for="@Model.Ciudad.IdCiudad" />
                 <div class="form-group">
                     <label class="control-label">País</label>
                     @Html.DropDownListFor(x => Model.Paises, new SelectList(Model.Paises, "ClavePais", "Nombre"), htmlAttributes: new { @class = "form-control", id = "Pais", onchange = "CargaEstados(this.value);" })
@@ -16,12 +16,13 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label">Estado</label>
-                    @Html.DropDownListFor(x => Model.Estados, new SelectList(Model.Estados, "IdEstado", "Descripcion"), htmlAttributes: new { @class = "form-control", id = "Estado", onchange = "CargaEstados(this.value);" })
-                    <span class="text-danger" asp-validation-for="Ciudad.Estado"></span>
+                    @Html.DropDownListFor(x => Model.Estados, new SelectList(Model.Estados, "IdEstado", "Descripcion"), htmlAttributes: new { @class = "form-control", id = "Estado", onchange = "CargaCiudades(this.value);" })
+                    <span class="text-danger" asp-validation-for="Estados"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Ciudad</label>
-                    <input asp-for="Ciudad.Ciudad" class="form-control" />
+                    @Html.DropDownListFor(x => Model.Ciudades, new SelectList(Model.Ciudades, "IdCiudad", "Descripcion"), htmlAttributes: new { @class = "form-control", id = "Estado", onchange = "" })
+                    <input asp-for="Ciudades" class="form-control" />
                     <span class="text-danger" asp-validation-for="Ciudad.Ciudad"></span>
                 </div>
 
@@ -33,4 +34,30 @@
     </div>
 
 </div>
+<script type="text/javascript">
+    function CargaCiudades(IdEstado) {
+        var url = "/Destino/Estados/";
 
+        ClavePais = ""
+
+        $.ajax({
+            url: url,
+            data: {
+                ClavePais: ClavePais,
+                IdEstado: IdEstado
+                },
+            cache: false,
+            type: "POST",
+            success: function (data) {
+                var markup = "<option value='0'>Seleccione</option>";
+                for (var x = 0; x < data.length; x++) {
+                    markup += "<option value=" + data[x].IdColonia + ">" + data[x].Colonia + "</option>";
+                }
+                $("#IdColonia").html(markup).show();
+            },
+            error: function (reponse) {
+                alert("error : " + reponse);
+            }
+        });
+    }
+</script>
