--- a/TravelExpenses/Views/Destinos/ListarDestinos.cshtml
+++ b/TravelExpenses/Views/Destinos/ListarDestinos.cshtml
@@ -3,7 +3,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table" id="data-table-basic">
     <thead>
         <tr>
             <th>
